--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -5,7 +5,7 @@ th {
   padding-right: 20px;
 }
 
-th[role="button"]:focus {
+th[tabindex]:focus-visible {
   outline: 2px solid var(--color-secondary);
   outline-offset: -2px;
 }
